Improve generator settings and readme
